--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
   </head>
   <body>
-  	{include navigation.html}
+  	{%include navigation.html%}
   	<div class="container">
   		{content}
   	</div>
