--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
   </head>
   <body>
-  	{%include navigation.html%}
+  	{% include navigation.html %}
   	<div class="container">
   		{content}
   	</div>
+  	{% include footer.html %}
   </body>
 </html>
