--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/grid.css">
+    <link rel="stylesheet" href="/css/elements.css">
+    <link rel="stylesheet" href="/css/prettyPhoto.css">
   </head>
   <body>
   	{% include navigation.html %}
