Messing With Layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="/css/prettyPhoto.css">
   </head>
   <body>
-  	{% include navigation.html %}
-  	<div class="container">
+  	<div id="content" data-easytabs="true">
   		{content}
   	</div>
   	{% include footer.html %}
