--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   </head>
   <body>
   	<div id="content" data-easytabs="true">
-  		{content}
+  		{{content}}
   	</div>
   	{% include footer.html %}
   </body>
