--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,13 @@
   	<div id="content" data-easytabs="true">
   		{{content}}
   	</div>
+
+    <!-- Scripts -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="js/libs/respond.min.js"></script>
+    <script src="js/libs/jquery.easytabs.min.js"></script>
+    <script src="js/libs/jquery.prettyPhoto.js"></script>
+    <script src="js/libs/jquery.validate.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
