Removed jQuery Validate, Moved Header To Include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <script src="js/libs/respond.min.js"></script>
     <script src="js/libs/jquery.easytabs.min.js"></script>
     <script src="js/libs/jquery.prettyPhoto.js"></script>
-    <script src="js/libs/jquery.validate.min.js"></script>
+    <!-- <script src="js/libs/jquery.validate.min.js"></script> -->
     <script src="js/script.js"></script>
   </body>
 </html>
