Added Missing Class

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="menu">
 		<ul>
-			<li id="default">
+			<li id="default" class="active">
 				<a href="#homepage" class="active">Home</a>
 			</li>
 			<li>
