--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,3 +1,8 @@
  <div class="wrapper contact" id="contact">
  	<span class="big-text">contact</span>
+     <div class="row">
+    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+     <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+     <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+         </div>
  </div>
